force-app/main/default/objects/Peak_Period__c/Peak_Period__c.object-meta.xml
<CustomObject>
    <description>Used for family retreat peak period settings.  See Property__C</description>
    <label>Peak Period</label>
    <nameField>
        <label>Peak period restrictions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peak Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>