force-app/main/default/objects/Peak_Period__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Peak period end date</description>
    <inlineHelpText>Peak period end date</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>