force-app/main/default/objects/Peak_Period__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Peak period start date</description>
    <inlineHelpText>Peak period start date</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>