force-app/main/default/objects/Peak_Period__c/validationRules/Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_validation</fullName>
    <active>true</active>
    <description>Start date to be before end date</description>
    <errorConditionFormula>Start_Date__c &gt;=  End_Date__c</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start date should be before end date</errorMessage>
</ValidationRule>