force-app/main/default/objects/Peak_Period__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Length_of_stay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>